Truncating issue names on completed scheme footer with text-overflow: ellipsis

--- a/sites/all/themes/asb/sass/views-styles.scss
+++ b/sites/all/themes/asb/sass/views-styles.scss
@@ -155,6 +155,10 @@ $needs: sprite-map("needs/*.png", $my-needs-position: 2 0);
 
     .field-issues-goals {
       margin-bottom: .5em;
+      overflow: hidden;
+      width: auto;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     // Completed Schemes
